[package]
name = "amplify-runner"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/amplify-security/runner"
readme = "README.adoc"

[dependencies]
bpaf = { version = "0.9.12" }
color-eyre = { version = "0.6.3", features = ["track-caller", "capture-spantrace", "issue-url"] }
enum_dispatch = "0.3.13"
reqwest = { version = "0.12.7", features = ["json", "rustls-tls"], default-features = false }
reqwest-middleware = { version = "0.3.3", default-features = false, features = ["json", "rustls-tls"] }
reqwest-retry = "0.6.1"
serde = { version = "1.0.204", features = ["derive"] }
thiserror = "1.0.63"
tokio = { version = "1.39.0", features = ["macros", "rt-multi-thread", "signal", "process", "sync", "time", "io-util", "io-std", "parking_lot"] }
