[package]
name = "amplify-runner"
version = "0.4.4"
edition = "2021"
repository = "https://github.com/amplify-security/runner"
readme = "README.adoc"

[[bin]]
name = "amplify-runner"
path = "src/main.rs"

[dependencies]
bpaf = { version = "0.9.12" }
color-eyre = { version = "0.6.3", features = ["track-caller", "capture-spantrace", "issue-url"] }
enum_dispatch = "0.3.13"
hex-literal = "0.4.1"
reqwest = { version = "0.12.7", features = ["json", "rustls-tls"], default-features = false }
reqwest-middleware = { version = "0.4.2", default-features = false, features = ["json", "rustls-tls"] }
reqwest-retry = "0.7.0"
serde = { version = "1.0.204", features = ["derive"] }
sha2 = "0.10.8"
thiserror = "1.0.63"
tokei = "12.1.2"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "signal", "process", "sync", "time", "io-util", "io-std", "parking_lot"] }
